@@ -20,6 +20,8 @@ RELEASE X.X.X - XXX
     - Detect implicit dependencies on commands even when the command is
       quoted.
 
+    - Fix interaction of $CHANGED_SOURCES with the --config=force option.
+
   From Robert P. J. Day:
 
     - User's Guide updates.
